--- a/style.css
+++ b/style.css
@@ -1,41 +1,131 @@
-body {
-  font-family: Rubik;
-  font-style: normal;
-}
-#wrapper {
-	max-width: 1920 px;
-	height: 1080 px;
-	margin: 0 auto;
-	padding: 0 px;
-}
+@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,700');
 
-.main_menu {
-	padding: 5px 0 5px 0;
+.navbar {
+	background-color:#272932;
+}
+.nav-Scrolling{
+	height:450px; width:18%;
+	overflow:hidden; overflow-y:scroll;
+}
+.body {
+	font-family: "Rubik";
+}
+#searchList {
+  list-style-type: none;
+  padding: 0;
+  margin-left: 0;
+}
+#itemToAdd {
+  width: 20%;
+  font-size: 16px;
+  padding: 12px 20px 12px 40px;
+  border: 1px solid #ddd;
+  margin-bottom: 12px;
+	margin-left: 650px;
+}
+.mainBox {
+	margin-top: 100px;
+	margin-left: 10px;
+}
+.headerBox {
+	background: #272932;
+	margin-top: 0px;
+	margin-left: 20px;
+	width: 500px;
+	height:65px;
+	color: white;
+	border-radius: 10px 10px 0px 0px;
+}
+.boxContainer {
+	background: white;
+	margin:0;
+	width:500px;
+	position: absolute;
+	height:650px;
+	margin-left: 20px;
+	margin-top: 0;
+	z-index: 1;
+}
+.costBox {
+	background: #272932;
+	width: 380px;
+	height: 150px;
+	margin-top: 30px;
+	margin-left: 55px;
+  border-radius: 10px;
+	z-index: 2;
+
+}
+.checkoutButton {
+	background-color: red;
+  border: none;
   color: white;
-	text-align: center;
-	line-height: 32px;
-	background-color: #333333;
+  text-align: center;
+	margin-left: 85px;
+	margin-top: 0px;
+  border-radius: 15px;
+	width: 200px;
+	height: 50px;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+	z-index: 3;
 }
-ul.main_menu {
-	margin-top: 15px;
+.searchBoxButton {
+	margin-top: -150px;
 }
-.main_menu li {
-	display: inline;
-	padding: 0 10px 0 10px;
-	font-size: 16px;
-	font-weight: 300;
-  font-size: 20px;
+#searchList li a {
+  border: 1px solid #ddd;
+  margin-top: -1px; /* Prevent double borders */
+	margin-left: 650px;
+  background-color: #f6f6f6;
+  padding: 12px;
+  text-decoration: none;
+  font-size: 18px;
+  color: black;
+  display: block;
+	width: 25%;
 }
-.main_menu a {
-	text-decoration: none;
-	color: white;
-	padding-left: 8px;
-	font-variant: small-caps;
-}
-.main_menu b{
-	text-decoration: none;
-	color: white;
-	padding-left: : 100 px;
-	font-variant: small-caps;
 
+
+/*---Firefox Bug Fix --*/
+.carousel-item {
+  transition: -webkit-transform 0.5s ease;
+  transition: transform 0.5s ease;
+  transition: transform 0.5s ease, -webkit-transform 0.5s ease;
+  -webkit-backface-visibility: visible;
+  backface-visibility: visible;
+}
+/*--- Fixed Background Image --*/
+figure {
+  position: relative;
+  width: 100%;
+  height: 60%;
+  margin: 0!important;
+}
+.fixed-wrap {
+  clip: rect(0, auto, auto, 0);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+#fixed {
+  background-image: url('img/mac.png');
+  position: fixed;
+  display: block;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center center;
+  -webkit-transform: translateZ(0);
+          transform: translateZ(0);
+  will-change: transform;
+}
+/*--- Bootstrap Padding Fix --*/
+[class*="col-"] {
+    padding: 1rem;
 }
